# CppDesk

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
apps/agent/: CMakeLists.txt
apps/agent/src/: agent.cpp  agent.h  main.cpp
apps/controller/: CMakeLists.txt
apps/controller/src/: controller.cpp  controller.h  main.cpp
apps/signal-server/: CMakeLists.txt
apps/signal-server/src/: main.cpp  server.cpp  server.h
docs/superpowers/plans/: 2026-07-17-remote-desktop-plan.md
docs/superpowers/specs/: 2026-07-17-remote-desktop-design.md
libs/libcapture/: CMakeLists.txt
libs/libcapture/include/: libcapture.h
libs/libcapture/src/: capture.cpp  dummy.cpp
libs/libclipboard/: CMakeLists.txt
libs/libclipboard/include/: libclipboard.h
libs/libclipboard/src/: clipboard.cpp  dummy.cpp
libs/libencode/: CMakeLists.txt
libs/libencode/include/: libencode.h
libs/libencode/src/: dummy.cpp  encoder.cpp
libs/libfiletransfer/: CMakeLists.txt
libs/libfiletransfer/include/: libfiletransfer.h
libs/libfiletransfer/src/: dummy.cpp  file_transfer.cpp
libs/libinput/: CMakeLists.txt
libs/libinput/include/: libinput.h
libs/libinput/src/: dummy.cpp  input.cpp
libs/libnetwork/: CMakeLists.txt
libs/libnetwork/include/: libnetwork.h
libs/libnetwork/include/libnetwork/: hole_punch.h  peer_channel.h  relay_channel.h  signal_client.h  stun.h  udp_socket.h
libs/libnetwork/src/: dummy.cpp  hole_punch.cpp  peer_channel.cpp  relay_channel.cpp  signal_client.cpp  stun.cpp  udp_socket.cpp
libs/libproto/: CMakeLists.txt
libs/libproto/include/: libproto.h
libs/libproto/src/: dummy.cpp  frame.cpp
libs/libui/: CMakeLists.txt
libs/libui/include/: libui.h
libs/libui/src/: dummy.cpp  render_window.cpp
tools/: add_flow_control.py  diag_delta.py  optimize_agent.py  optimize_controller.py  optimize_round2.py  optimize_round3.py
