add_library(libnetwork STATIC src/udp_socket.cpp src/peer_channel.cpp src/stun.cpp src/signal_client.cpp src/hole_punch.cpp)
target_include_directories(libnetwork PUBLIC include ${CMAKE_SOURCE_DIR}/libs/libproto/include)
target_link_libraries(libnetwork PUBLIC libproto ws2_32 sodium)
if(BUILD_TESTING)
    add_subdirectory(tests)
endif()
